TAs added and links updated for now for guest TA lectures - still few things need rectification like Ensemble notebook + Bias Variance 2 slides are yet to be formatted

--- a/index.qmd
+++ b/index.qmd
@@ -42,6 +42,12 @@ Office: 13/401C
 - Kaloori Shiva Prasad (24250041@iitgn.ac.in)
 - Mallika Chouhan (24250052@iitgn.ac.in)
 - Suruchi Hardaha (24250097@iitgn.ac.in)
+- Aditya Mehta (aditya.mehta@iitgn.ac.in)
+- Guntas Singh Saran (guntassingh.saran@iitgn.ac.in)
+- Neerja Kasture (neerja.kasture@iitgn.ac.in)
+- Akash Gupta (akash.gupta@iitgn.ac.in)
+- Umang Shikarvar (umang.shikarvar@iitgn.ac.in)
+- Venkatakrishnan E (venkatakrishnan.e@iitgn.ac.in)
 :::
 
 
