--- a/index.qmd
+++ b/index.qmd
@@ -31,17 +31,16 @@ Office: 13/401C
 
 **Teaching Assistants:**
 
-- Palak Gupta (24250063@iitgn.ac.in)
-- Abhyudaya Nair (24210005@iitgn.ac.in)  
-- Dekka Muni Kumar (24210028@iitgn.ac.in)
-- Diya Ashvinsinh Thakor (24210032@iitgn.ac.in)
-- Vinayak Rana (24210114@iitgn.ac.in)
+- Palak Gupta (palak.gupta@iitgn.ac.in)
+- Abhyudaya Nair (abhyudaya.nair@iitgn.ac.in)  
+- Dekka Muni Kumar (muni.kumar@iitgn.ac.in)
+- Diya Ashvinsinh Thakor (diya.thakor@iitgn.ac.in)
+- Vinayak Rana (vinayak.rana@iitgn.ac.in)
 - Rishabh Mondal (rishabh.mondal@iitgn.ac.in)
 - Ayush Shrivastava (shrivastavaayush@iitgn.ac.in)
-- Chetana Dubey (24250030@iitgn.ac.in)
-- Kaloori Shiva Prasad (24250041@iitgn.ac.in)
-- Mallika Chouhan (24250052@iitgn.ac.in)
-- Suruchi Hardaha (24250097@iitgn.ac.in)
+- Kaloori Shiva Prasad (kaloori.shiva@iitgn.ac.in)
+- Suruchi Hardaha (suruchi.hardaha@iitgn.ac.in)
+- Prathamesh Shanbhag (prathamesh.shanbhag@iitgn.ac.in)
 - Aditya Mehta (aditya.mehta@iitgn.ac.in)
 - Guntas Singh Saran (guntassingh.saran@iitgn.ac.in)
 - Neerja Kasture (neerja.kasture@iitgn.ac.in)
