--- a/schedule.qmd
+++ b/schedule.qmd
@@ -19,8 +19,8 @@ title: "Schedule"
 |     1     |    6 Aug    | [Introduction and Logistics](https://nipunbatra.github.io/ml-teaching/basics/slides/1-introduction-ml-2025.pdf)                      |      [Transcription and local LLMs](https://nipunbatra.github.io/ml-teaching/notebooks/transcript.html), [Segmentation and Localization](https://nipunbatra.github.io/ml-teaching/notebooks/object-detection-segmentation.html), [Prompt to Image](https://nipunbatra.github.io/ml-teaching/notebooks/text_to_image.html)     |            |
 | 2| 7 Aug| [Convention, Metrics, Classification, Regression](https://nipunbatra.github.io/ml-teaching/basics/slides/accuracy-convention-handout.pdf)|[Rule based vs ML](https://nipunbatra.github.io/ml-teaching/notebooks/rule-based-vs-ml.html), [Confusion Matrix](https://nipunbatra.github.io/ml-teaching/notebooks/confusion-mnist.html), [Dummy baselines](https://nipunbatra.github.io/ml-teaching/notebooks/dummy-baselines.html)||
 | 3| 8 Aug| [Decision Trees 1](https://nipunbatra.github.io/ml-teaching/supervised/slides/decision-trees.pdf)|[Entropy](https://nipunbatra.github.io/ml-teaching/notebooks/entropy.html), [Decision Trees Real Output](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-output.html), [DT Real Input Discrete Output](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-input-discrete-output.html)||
-| 4| 20 Aug| [Ensemble Learning](https://nipunbatra.github.io/ml-teaching/supervised/slides/ensemble-handout.pdf)|||
-| 5| 21 Aug| [Decision Tree Pruning](https://nipunbatra.github.io/ml-teaching/supervised/slides/decision-trees-handout.pdf), [Bias-Variance Trade-off 2](https://nipunbatra.github.io/ml-teaching/supervised/slides/bias-variance-2.pdf)|||
+| 4| 20 Aug| [Ensemble Learning](https://nipunbatra.github.io/ml-teaching/supervised/slides/ensemble-handout.pdf) | [Boosting Explanation](https://nipunbatra.github.io/ml-teaching/notebooks/boosting-explanation.html), [Ensemble Feature Importance](https://nipunbatra.github.io/ml-teaching/notebooks/ensemble-feature-importance.html), [Ensemble Representation](https://nipunbatra.github.io/ml-teaching/notebooks/ensemble-representation.html) ||
+| 5| 21 Aug| [Decision Tree Pruning](https://nipunbatra.github.io/ml-teaching/supervised/slides/decision-trees-pruning.pdf), [Bias-Variance Trade-off 2](https://nipunbatra.github.io/ml-teaching/supervised/slides/bias-variance-2.pdf) | [Decision Tree Pruning Notebook](https://nipunbatra.github.io/ml-teaching/notebooks/dt-pruning.html) ||
 | 6| 22 Aug| [Maths for ML](https://nipunbatra.github.io/ml-teaching/maths/slides/mathematical-ml-handout.pdf), [Contours & Gradients](https://nipunbatra.github.io/ml-teaching/maths/slides/ml-maths-2-contour-handout.pdf), [Decision Tree Time Complexity](https://nipunbatra.github.io/ml-teaching/maths/slides/decision-tree-complexity-handout.pdf)|||
 
 
