slides content updated

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -15,13 +15,19 @@ title: "Schedule"
 
 | Lecture # |    Date     | Topic (Slides)                                  | Notebooks |  Reading |
 |:------:|:--------------:|:------------------------------------------------|:---------:|:---------|
-|     0     | 25 Jul| [Pre-requisite quiz released](exams/prereq.qmd) |           |          |
-|     1     |    6 Aug    | [Introduction and Logistics](https://nipunbatra.github.io/ml-teaching/basics/slides/1-introduction-ml-2025.pdf)                      |      [Transcription and local LLMs](https://nipunbatra.github.io/ml-teaching/notebooks/transcript.html), [Segmentation and Localization](https://nipunbatra.github.io/ml-teaching/notebooks/object-detection-segmentation.html), [Prompt to Image](https://nipunbatra.github.io/ml-teaching/notebooks/text_to_image.html)     |            |
-| 2| 7 Aug| [Convention, Metrics, Classification, Regression](https://nipunbatra.github.io/ml-teaching/basics/slides/accuracy-convention-handout.pdf)|[Rule based vs ML](https://nipunbatra.github.io/ml-teaching/notebooks/rule-based-vs-ml.html), [Confusion Matrix](https://nipunbatra.github.io/ml-teaching/notebooks/confusion-mnist.html), [Dummy baselines](https://nipunbatra.github.io/ml-teaching/notebooks/dummy-baselines.html)||
-| 3| 8 Aug| [Decision Trees 1](https://nipunbatra.github.io/ml-teaching/supervised/slides/decision-trees.pdf)|[Entropy](https://nipunbatra.github.io/ml-teaching/notebooks/entropy.html), [Decision Trees Real Output](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-output.html), [DT Real Input Discrete Output](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-input-discrete-output.html)||
-| 4| 20 Aug| [Ensemble Learning](https://nipunbatra.github.io/ml-teaching/supervised/slides/ensemble-handout.pdf) | [Boosting Explanation](https://nipunbatra.github.io/ml-teaching/notebooks/boosting-explanation.html), [Ensemble Feature Importance](https://nipunbatra.github.io/ml-teaching/notebooks/ensemble-feature-importance.html), [Ensemble Representation](https://nipunbatra.github.io/ml-teaching/notebooks/ensemble-representation.html) ||
-| 5| 21 Aug| [Decision Tree Pruning](https://nipunbatra.github.io/ml-teaching/supervised/slides/decision-trees-pruning.pdf), [Bias-Variance Trade-off 2](https://nipunbatra.github.io/ml-teaching/supervised/slides/bias-variance-2.pdf) | [Decision Tree Pruning Notebook](https://nipunbatra.github.io/ml-teaching/notebooks/dt-pruning.html) ||
-| 6| 22 Aug| [Maths for ML](https://nipunbatra.github.io/ml-teaching/maths/slides/mathematical-ml-handout.pdf), [Contours & Gradients](https://nipunbatra.github.io/ml-teaching/maths/slides/ml-maths-2-contour-handout.pdf), [Decision Tree Time Complexity](https://nipunbatra.github.io/ml-teaching/maths/slides/decision-tree-complexity-handout.pdf)|||
+|     0     | 25 Jul| [Pre-requisite quiz released](exams/prereq.qmd){target="_blank"} |           |          |
+|     1     |    6 Aug    | [Introduction and Logistics](https://nipunbatra.github.io/ml-teaching/basics/slides/1-introduction-ml-2025.pdf){target="_blank"}                     |      [Transcription and local LLMs](https://nipunbatra.github.io/ml-teaching/notebooks/transcript.html){target="_blank"}, [Segmentation and Localization](https://nipunbatra.github.io/ml-teaching/notebooks/object-detection-segmentation.html){target="_blank"}, [Prompt to Image](https://nipunbatra.github.io/ml-teaching/notebooks/text_to_image.html){target="_blank"}     |            |
+| 2| 7 Aug| [Convention, Metrics, Classification, Regression](https://nipunbatra.github.io/ml-teaching/basics/slides/accuracy-convention-handout.pdf){target="_blank"}|[Rule based vs ML](https://nipunbatra.github.io/ml-teaching/notebooks/rule-based-vs-ml.html){target="_blank"}, [Confusion Matrix](https://nipunbatra.github.io/ml-teaching/notebooks/confusion-mnist.html){target="_blank"}, [Dummy baselines](https://nipunbatra.github.io/ml-teaching/notebooks/dummy-baselines.html){target="_blank"}||
+| 3| 8 Aug| [Decision Trees 1](https://nipunbatra.github.io/ml-teaching/supervised/slides/decision-trees-handout.pdf){target="_blank"}|[Entropy](https://nipunbatra.github.io/ml-teaching/notebooks/entropy.html){target="_blank"}, [Decision Trees Real Output](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-output.html){target="_blank"}, [DT Real Input Discrete Output](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-input-discrete-output.html){target="_blank"}||
+| 4| 13 Aug| [Decision Trees 2](https://nipunbatra.github.io/ml-teaching/supervised/slides/decision-trees-handout.pdf){target="_blank"}|[Decision Trees + Overfitting, Underfitting](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-input-real-output.html){target="_blank"}||
+| 5| 14 Aug| [Bias-Variance Trade-off 1](https://nipunbatra.github.io/ml-teaching/supervised/slides/bias-variance.pdf){target="_blank"}, [Cross-Validation](https://nipunbatra.github.io/ml-teaching/supervised/slides/cross-validation-handout.pdf){target="_blank"}|[Tuning Hyperparameters](https://nipunbatra.github.io/ml-teaching/notebooks/hyperparams-experiments.html){target="_blank"}, [Bias-Variance Analysis](https://nipunbatra.github.io/ml-teaching/notebooks/bias-variance.html){target="_blank"}, [Bias-Variance Charts](https://nipunbatra.github.io/ml-teaching/notebooks/bias-variance-charts.html){target="_blank"}||
+| 6| 20 Aug| [Ensemble Learning](https://nipunbatra.github.io/ml-teaching/supervised/slides/ensemble-handout.pdf){target="_blank"} | [Boosting Explanation](https://nipunbatra.github.io/ml-teaching/notebooks/boosting-explanation.html){target="_blank"}, [Ensemble Feature Importance](https://nipunbatra.github.io/ml-teaching/notebooks/ensemble-feature-importance.html){target="_blank"}, [Ensemble Representation](https://nipunbatra.github.io/ml-teaching/notebooks/ensemble-representation.html){target="_blank"} ||
+| 7| 21 Aug| [Decision Tree Pruning](https://nipunbatra.github.io/ml-teaching/supervised/slides/decision-tree-pruning-handout.pdf){target="_blank"}, [Bias-Variance Trade-off 2](https://nipunbatra.github.io/ml-teaching/supervised/slides/bias-variance-2.pdf){target="_blank"} | [Decision Tree Pruning Notebook](https://nipunbatra.github.io/ml-teaching/notebooks/dt-pruning.html){target="_blank"} ||
+| 8| 22 Aug| [Maths for ML](https://nipunbatra.github.io/ml-teaching/maths/slides/mathematical-ml-handout.pdf){target="_blank"}, [Contours & Gradients](https://nipunbatra.github.io/ml-teaching/maths/slides/ml-maths-2-contour-handout.pdf){target="_blank"}, [Decision Tree Time Complexity](https://nipunbatra.github.io/ml-teaching/maths/slides/decision-tree-complexity-handout.pdf){target="_blank"}|[Contour Plots](https://nipunbatra.github.io/ml-teaching/notebooks/contour.html){target="_blank"},[Meshgrid & Contours](https://nipunbatra.github.io/ml-teaching/notebooks/meshgrid.html)||
+| 9| 27 Aug| [Linear Regression 1](https://nipunbatra.github.io/ml-teaching/supervised/slides/linear-regression-handout.pdf){target="_blank"} | [Decision Tree Pruning Notebook](https://nipunbatra.github.io/ml-teaching/notebooks/dt-pruning.html){target="_blank"} ||
+| 10| 28 Aug| [Linear Regression 2](https://nipunbatra.github.io/ml-teaching/supervised/slides/linear-regression-handout.pdf){target="_blank"} | [Geometric Linear Regression](https://nipunbatra.github.io/ml-teaching/notebooks/geometric-linear-regression.html){target="_blank"},[Basis Expansion](https://nipunbatra.github.io/ml-teaching/notebooks/basis.html){target="_blank"},[Basis Expansion 2](https://nipunbatra.github.io/ml-teaching/notebooks/basis2.html){target="_blank"}, [Dummy Variables](https://nipunbatra.github.io/ml-teaching/notebooks/dummy-variables-multi-colinearity.html){target="_blank"} ||
+| 11| 29 Aug| [Gradient Descent](https://nipunbatra.github.io/ml-teaching/supervised/slides/gradient-descent-handout.pdf){target="_blank"} | [Taylor's series](https://nipunbatra.github.io/ml-teaching/notebooks/taylor.html){target="_blank"}, [Contours & Gradient Descent](https://nipunbatra.github.io/ml-teaching/notebooks/contour.html){target="_blank"} ||
+| 12| 3 Sep| [Movie recommendation & Matrix Factorization](https://nipunbatra.github.io/ml-teaching/supervised/slides/movie-recommendation.pdf)|[Movie Recommendation](https://nipunbatra.github.io/ml-teaching/notebooks/movie-recommendation-knn-mf.html) ||
 
 
 <!--
