Added lecture for 17th sep

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -27,11 +27,11 @@ title: "Schedule"
 | 9| 27 Aug| [Linear Regression 1](https://nipunbatra.github.io/ml-teaching/supervised/slides/linear-regression-handout.pdf){target="_blank"} | [Decision Tree Pruning Notebook](https://nipunbatra.github.io/ml-teaching/notebooks/dt-pruning.html){target="_blank"} ||
 | 10| 28 Aug| [Linear Regression 2](https://nipunbatra.github.io/ml-teaching/supervised/slides/linear-regression-handout.pdf){target="_blank"} | [Geometric Linear Regression](https://nipunbatra.github.io/ml-teaching/notebooks/geometric-linear-regression.html){target="_blank"},[Basis Expansion](https://nipunbatra.github.io/ml-teaching/notebooks/basis.html){target="_blank"},[Basis Expansion 2](https://nipunbatra.github.io/ml-teaching/notebooks/basis2.html){target="_blank"}, [Dummy Variables](https://nipunbatra.github.io/ml-teaching/notebooks/dummy-variables-multi-colinearity.html){target="_blank"} ||
 | 11| 29 Aug| [Gradient Descent](https://nipunbatra.github.io/ml-teaching/optimization/slides/gradient-descent-handout.pdf){target="_blank"} | [Taylor's series](https://nipunbatra.github.io/ml-teaching/notebooks/taylor.html){target="_blank"}, [Contours & Gradient Descent](https://nipunbatra.github.io/ml-teaching/notebooks/contour.html){target="_blank"} ||
-| 12| 3 Sep| [Movie recommendation & Matrix Factorization](https://nipunbatra.github.io/ml-teaching/supervised/slides/movie-recommendation.pdf)|[Movie Recommendation](https://nipunbatra.github.io/ml-teaching/notebooks/movie-recommendation-knn-mf.html) ||
-| 13| 10 Sep| [Ridge Regression](https://nipunbatra.github.io/ml-teaching/supervised/slides/ridge-regression-handout.pdf)|[Ridge Regression](https://nipunbatra.github.io/ml-teaching/notebooks/ridge.html)||
-| 14| 11 Sep| [Lasso Regression](https://nipunbatra.github.io/ml-teaching/supervised/slides/lasso-regression-handout.pdf)|[Lasso Regression](https://nipunbatra.github.io/ml-teaching/notebooks/lasso-regression.html)||
-| 15| 12 Sep| [Constrained Optimization](https://nipunbatra.github.io/ml2022/lectures/ml-maths-3.pdf)|||
-
+| 12| 3 Sep| [Movie recommendation & Matrix Factorization](https://nipunbatra.github.io/ml-teaching/supervised/slides/movie-recommendation.pdf){target="_blank"} | [Movie Recommendation](https://nipunbatra.github.io/ml-teaching/notebooks/movie-recommendation-knn-mf.html){target="_blank"} ||
+| 13| 10 Sep| [Ridge Regression](https://nipunbatra.github.io/ml-teaching/supervised/slides/ridge-regression-handout.pdf){target="_blank"} | [Ridge Regression](https://nipunbatra.github.io/ml-teaching/notebooks/ridge.html){target="_blank"} ||
+| 14| 11 Sep| [Lasso Regression](https://nipunbatra.github.io/ml-teaching/supervised/slides/lasso-regression-handout.pdf){target="_blank"} | [Lasso Regression](https://nipunbatra.github.io/ml-teaching/notebooks/lasso-regression.html){target="_blank"} ||
+| 15| 12 Sep| [Constrained Optimization](https://nipunbatra.github.io/ml2022/lectures/ml-maths-3.pdf){target="_blank"} |||
+| 16| 17 Sep| [Logistic Regression] (https://nipunbatra.github.io/ml-teaching/supervised/slides/logistic-regression.pdf){target="_blank"} | [Why use logits](https://nipunbatra.github.io/ml-teaching/notebooks/logits-usage.html){target="_blank"}, [Logistic regression in Torch](https://nipunbatra.github.io/ml-teaching/notebooks/logistic-regression-torch.html){target="_blank"} ||
 <!--
 | 4| 9 Aug| [Decision Trees 2, Bias and Variance](https://nipunbatra.github.io/ml-teaching/supervised/slides/bias-variance.pdf)|[Bias variance](https://nipunbatra.github.io/ml-teaching/notebooks/bias-variance.html), [Decision Trees + Overfitting, Underfitting](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-input-real-output.html)| |
 |5| 13 Aug| Tutorial on Numpy, Pandas, Classes, [Cross-validation](https://nipunbatra.github.io/ml-teaching/supervised/slides/cross-validation.pdf)| [Numpy, Pandas, Entropy](https://nipunbatra.github.io/ml-teaching/notebooks/numpy-pandas-basics.html), [Classes and Trees](https://nipunbatra.github.io/ml-teaching/notebooks/classes-trees.html), [Cross-validation and tuning hyperparameters](https://nipunbatra.github.io/ml-teaching/notebooks/hyperparams-experiments.html)||
