oct 8 9 10 content added

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -31,7 +31,11 @@ title: "Schedule"
 | 13| 10 Sep| [Ridge Regression](https://nipunbatra.github.io/ml-teaching/supervised/slides/ridge-regression-handout.pdf){target="_blank"} | [Ridge Regression](https://nipunbatra.github.io/ml-teaching/notebooks/ridge.html){target="_blank"} ||
 | 14| 11 Sep| [Lasso Regression](https://nipunbatra.github.io/ml-teaching/supervised/slides/lasso-regression-handout.pdf){target="_blank"} | [Lasso Regression](https://nipunbatra.github.io/ml-teaching/notebooks/lasso-regression.html){target="_blank"} ||
 | 15| 12 Sep| [Constrained Optimization](https://nipunbatra.github.io/ml2022/lectures/ml-maths-3.pdf){target="_blank"} |||
-| 16| 17 Sep| [Logistic Regression](https://nipunbatra.github.io/ml-teaching/supervised/slides/logistic-regression-handout.pdf){target="_blank"} | [Why use logits](https://nipunbatra.github.io/ml-teaching/notebooks/logits-usage.html){target="_blank"}, [Logistic regression in Torch](https://nipunbatra.github.io/ml-teaching/notebooks/logistic-regression-torch.html){target="_blank"} ||
+| 16| 17 Sep| [Logistic Regression 1](https://nipunbatra.github.io/ml-teaching/supervised/slides/logistic-regression-handout.pdf){target="_blank"} | [Why use logits](https://nipunbatra.github.io/ml-teaching/notebooks/logits-usage.html){target="_blank"}, [Logistic regression in Torch](https://nipunbatra.github.io/ml-teaching/notebooks/logistic-regression-torch.html){target="_blank"} ||
+| 17| 8 Oct| [Logistic Regression 2](https://nipunbatra.github.io/ml-teaching/supervised/slides/logistic-regression-handout.pdf){target="_blank"} | [Why use logits](https://nipunbatra.github.io/ml-teaching/notebooks/logits-usage.html){target="_blank"}, [Logistic regression in Torch](https://nipunbatra.github.io/ml-teaching/notebooks/logistic-regression-torch.html){target="_blank"} ||
+| 18| 9 Oct| [Tutorial on Convexity, Hessian, IRLS](https://nipunbatra.github.io/ml-teaching/optimization/slides/convexity-hessian-irls.pdf){target="_blank"} | [Notebook on 2nd Order Logistic Regression](https://nipunbatra.github.io/ml-teaching/notebooks/logistic-torch-second-order.html){target="_blank"} ||
+| 19| 10 Oct| [Precision-Recall Curves](https://nipunbatra.github.io/ml-teaching/supervised/slides/pr-curve.pdf){target="_blank"} | [Notebook on PR Curves](https://nipunbatra.github.io/ml-teaching/notebooks/pr-curve.html){target="_blank"} ||
+<!-- | 20| 15 Oct| [MLP 1](https://nipunbatra.github.io/ml-teaching/neural-networks/slides/mlp.pdf){target="_blank"} ||| -->
 <!--
 | 4| 9 Aug| [Decision Trees 2, Bias and Variance](https://nipunbatra.github.io/ml-teaching/supervised/slides/bias-variance.pdf)|[Bias variance](https://nipunbatra.github.io/ml-teaching/notebooks/bias-variance.html), [Decision Trees + Overfitting, Underfitting](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-input-real-output.html)| |
 |5| 13 Aug| Tutorial on Numpy, Pandas, Classes, [Cross-validation](https://nipunbatra.github.io/ml-teaching/supervised/slides/cross-validation.pdf)| [Numpy, Pandas, Entropy](https://nipunbatra.github.io/ml-teaching/notebooks/numpy-pandas-basics.html), [Classes and Trees](https://nipunbatra.github.io/ml-teaching/notebooks/classes-trees.html), [Cross-validation and tuning hyperparameters](https://nipunbatra.github.io/ml-teaching/notebooks/hyperparams-experiments.html)||
