--- a/schedule.qmd
+++ b/schedule.qmd
@@ -35,6 +35,11 @@ title: "Schedule"
 | 17| 8 Oct| [Logistic Regression 2](https://nipunbatra.github.io/ml-teaching/supervised/slides/logistic-regression-handout.pdf){target="_blank"} | [Why use logits](https://nipunbatra.github.io/ml-teaching/notebooks/logits-usage.html){target="_blank"}, [Logistic regression in Torch](https://nipunbatra.github.io/ml-teaching/notebooks/logistic-regression-torch.html){target="_blank"} ||
 | 18| 9 Oct| [Tutorial on Convexity, Hessian, IRLS](https://nipunbatra.github.io/ml-teaching/optimization/slides/convexity-hessian-irls.pdf){target="_blank"} | [Notebook on 2nd Order Logistic Regression](https://nipunbatra.github.io/ml-teaching/notebooks/logistic-torch-second-order.html){target="_blank"} ||
 | 19| 10 Oct| [Precision-Recall Curves](https://nipunbatra.github.io/ml-teaching/supervised/slides/pr-curve.pdf){target="_blank"} | [Notebook on PR Curves](https://nipunbatra.github.io/ml-teaching/notebooks/pr-curve.html){target="_blank"} ||
+| 20| 15 Oct| [Multi-Layer Perceptrons](https://nipunbatra.github.io/ml-teaching/neural-networks/slides/mlp.pdf){target="_blank"} | [Perceptron learning algorithm](https://nipunbatra.github.io/ml-teaching/notebooks/perceptron-learning.html){target="_blank} ||
+| 21| 16 Oct| [Automatic Differentiation](https://nipunbatra.github.io/ml-teaching/neural-networks/slides/autograd.pdf){target="_blank"} | [Notebook on Autodiff](https://nipunbatra.github.io/ml-teaching/notebooks/autodiff.html){target="_blank} ||
+| 22| 17 Oct|| [Autograd from scratch](https://nipunbatra.github.io/ml-teaching/notebooks/autograd-from-scratch.html){target="_blank} ||
+
+
 <!-- | 20| 15 Oct| [MLP 1](https://nipunbatra.github.io/ml-teaching/neural-networks/slides/mlp.pdf){target="_blank"} ||| -->
 <!--
 | 4| 9 Aug| [Decision Trees 2, Bias and Variance](https://nipunbatra.github.io/ml-teaching/supervised/slides/bias-variance.pdf)|[Bias variance](https://nipunbatra.github.io/ml-teaching/notebooks/bias-variance.html), [Decision Trees + Overfitting, Underfitting](https://nipunbatra.github.io/ml-teaching/notebooks/decision-tree-real-input-real-output.html)| |
